Commenting settings icons too small - fixed.

--- a/src/stylesheets/commentingSettingsLink.scss
+++ b/src/stylesheets/commentingSettingsLink.scss
@@ -9,4 +9,8 @@
         cursor: pointer;
         display: inline-block;
     }
+
+    i {
+    	font-size: 14px;
+    }
 }
